--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>sandbox-springboot-rest</module>
+        <module>coordinator-api-helpdesk</module>
+        <module>sandbox-springboot-security</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
